--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,19 +1,22 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #aaa;
+.index-top{
+  width:100%;
+  height:694rpx;
+  position: relative;
 }
-
-.userinfo-avatar {
-  overflow: hidden;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.top-bg{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height: 694rpx;
 }
-
-.usermotto {
-  margin-top: 200px;
+.input-wrap{
+  width: 700rpx;
+height: 90rpx;
+background: #FFFFFF;
+border-radius: 15rpx;
+position: absolute;
+left:25rpx;
+top:287rpx;
 }
