--- a/pages/news/news.wxml
+++ b/pages/news/news.wxml
@@ -1,10 +1,10 @@
 <!--pages/news/news.wxml-->
 <view class="news-wrap">
   <image src="../../img/icon6.png" class="news-img"></image>
-  <view class="select-view">点击选择近72小时内发生安全事件的国家
+  <view class="select-view" bindtap="togglePop">点击选择近72小时内发生安全事件的国家
     <image src="../../img/icon7.png" class="select-img"></image>
   </view>
-  <view class="news-list" wx:for="{{newsList}}" wx:key="index"  bindtap="goDetail">
+  <view class="news-list" wx:for="{{newsList}}" wx:key="index" bindtap="toPath" data-path="newsdetail">
     <view class="news-left">
       <view class="news-list-text">近期曼谷遭遇了近半个世纪以来最大的洪灾</view>
       <text class="news-list-time">2021-08-17 10:36</text>
@@ -13,5 +13,15 @@
       <image src="../../img/icon6.png" class="news-list-img"></image>
     </view>
   </view>
- 
+  <!-- 选择国家 -->
+  <view class="wx-popup" catchtouchmove="true" wx:if="{{popFlag}}">
+    <view class="popup-container">
+      <view class="popup-title">近72小时内发生安全事件的国家 <image src="../../img/icon8.png" class="close-img" bindtap="togglePop"></image>
+      </view>
+      <view class="popup-list">
+      <text class="list-item" wx:for="{{countryList}}" wx:key="index">泰国</text>
+      <text class="list-item list-item-active">泰国</text>
+      </view>
+    </view>
+  </view>
 </view>
