--- a/pages/newsdetail/newsdetail.wxss
+++ b/pages/newsdetail/newsdetail.wxss
@@ -1,1 +1,30 @@
 /* pages/newsdetail/newsdetail.wxss */
+.newsdetail-wrap {
+  padding: 42rpx;
+}
+
+.newsdetail-title {
+  font-size: 38rpx;
+  line-height: 42rpx;
+}
+
+.newsdetail-tip {
+  color: #A4A4A4;
+  font-size: 26rpx;
+  margin: 30rpx 0;
+}
+
+.newsdetail-tip text {
+  padding-right: 50rpx;
+}
+
+.newsdetail-content {
+  font-size: 30rpx;
+  line-height: 50rpx;
+}
+
+.newsdetail-content image {
+  max-width: 666rpx;
+  margin: 20rpx auto;
+  display: block;
+}
