--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -37,10 +37,16 @@
   font-size: 32rpx;
 }
 
+.del-view {
+  width: 47rpx;
+  height: 90rpx;
+  margin-right: 25rpx;
+}
+
 .input-close {
   width: 47rpx;
   height: 47rpx;
-  margin-right: 25rpx;
+  margin-top: 21rpx;
 }
 
 .input-search {
@@ -149,4 +155,54 @@
   font-size: 24rpx;
   color: #A4A4A4;
   line-height: 42rpx;
+}
+
+.wx-popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .5);
+  z-index: 2;
+}
+
+.popup-container-center {
+  position: fixed;
+  left: 50%;
+  bottom: 50%;
+  margin-left: -285rpx;
+  margin-bottom: -180rpx;
+  z-index: 2;
+  width: 570rpx;
+  height: 360rpx;
+  background: #FFFFFF;
+  border-radius: 20rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.pop-img {
+  width: 64rpx;
+  height: 64rpx;
+}
+
+.pop-text {
+  font-size: 30rpx;
+  color: #000;
+  margin: 38rpx 0 70rpx;
+}
+
+.pop-button {
+  width: 204rpx;
+  height: 56rpx;
+  background: #4692C4;
+  opacity: 0.95;
+  border-radius: 20rpx;
+  font-size: 30rpx;
+  color: #fff;
+  text-align: center;
+  line-height: 56rpx;
 }
