--- a/pages/citydetail/citydetail.wxml
+++ b/pages/citydetail/citydetail.wxml
@@ -4,7 +4,9 @@
     <image src="../../img/icon19.png" class="top-logo"></image>
     <view class="input-wrap">
       <input value="{{cityName}}" type="text" class="input-style" placeholder="输入您所关心的城市" bindinput="getCityNameVal" />
-      <image src="../../img/icon10.png" class="input-close" bindtap="delIptVal"></image>
+      <view class="del-view" bindtap="delIptVal">
+        <image src="../../img/icon10.png" class="input-close"></image>
+      </view>
       <view class="input-search" bindtap="searchIptVal">
         <image src="../../img/icon11.png" class="search-img"></image>
       </view>
@@ -51,6 +53,67 @@
     </view>
   </block>
   <view class="title-style">近3天天气情况</view>
+  <view class="weather-wrap">
+    <view class="weather-info">
+      <view class="weather-left">28℃ <text class="weather-tip">多云</text></view>
+      <view class="shu"></view>
+      <view class="weather-right">
+        <view class="weather-top">
+          <view class="weather-top-view">
+            <image src="../../img/icon25.png" class="icon25"></image>
+            <view class="weather-top-info">
+              <view>空气湿度</view>
+              <view>81%</view>
+            </view>
+          </view>
+          <view class="weather-top">
+            <view class="weather-top-view">
+              <image src="../../img/icon26.png" class="icon26"></image>
+              <view class="weather-top-info">
+                <view>紫外线</view>
+                <view>--</view>
+              </view>
+            </view>
+          </view>
+          <view class="weather-top">
+            <view class="weather-top-view">
+              <image src="../../img/icon27.png" class="icon27"></image>
+              <view class="weather-top-info">
+                <view>无风</view>
+                <view>0Km/h</view>
+              </view>
+            </view>
+          </view>
+        </view>
+        <view class="weather-bottom">
+          <image src="../../img/icon28.png" class="icon28"></image>2021年08月09日07时00分（当地时间）
+        </view>
+      </view>
+    </view>
+    <view class="weather-list">
+      <view class="weather-item weather-item1">
+        <view>08月09日</view>
+        <image src="../../img/icon29.png" class="weather-img"></image>
+        <view>雷阵雨</view>
+        <view>28℃-34℃</view>
+        <view>...</view>
+      </view>
+      <view class="weather-item weather-item2">
+        <view>08月10日</view>
+        <image src="../../img/icon29.png" class="weather-img"></image>
+        <view>雷阵雨</view>
+        <view>28℃-34℃</view>
+        <view>...</view>
+      </view>
+      <view class="weather-item weather-item3">
+        <view>08月11日</view>
+        <image src="../../img/icon29.png" class="weather-img"></image>
+        <view>雷阵雨</view>
+        <view>28℃-34℃</view>
+        <view>...</view>
+      </view>
+    </view>
+  </view>
   <view class="title-style">本年天气情况</view>
   <block wx:if="{{true}}">
     <view class="year-title">
@@ -60,7 +123,7 @@
       <text class="year-text4">平均总降水量</text>
       <text class="year-text5">平均降水系数</text>
     </view>
-    <view class="year-title year-data" wx:for="{{yearData}}" wx:key="index">
+    <view class="year-title year-data" wx:for="{{yearDataShow}}" wx:key="index">
       <text class="year-text1">{{index+1}}月</text>
       <text class="year-text2">21.0</text>
       <text class="year-text3">32.0</text>
@@ -68,7 +131,10 @@
       <text class="year-text5">32.0</text>
     </view>
     <view class="toggle-wrap">
-      <text>点击展开全部></text>
+      <view bindtap="toggleYear" wx:if="{{toggleFlag}}" class="toggle-view">点击展开全部<image src="../../img/icon24.png" class="top-img top-img1"></image>
+      </view>
+      <view bindtap="toggleYear" wx:else class="toggle-view">收起<image src="../../img/icon24.png" class="top-img"></image>
+      </view>
     </view>
   </block>
   <view class="no-list" wx:else>
@@ -81,14 +147,17 @@
   </view>
   <block wx:if="{{true}}">
     <view class="info-data">【国名】泰王国（The Kingdom of Thailand）。
-    【面积】51.3万平方公里。、马来西亚接壤，
-    东南临泰国湾（太平洋），西南濒安达曼海（印度洋）,
-    属热带季风气候，全年分为热、雨、凉三季，年均气温
-    27℃。
-    【首都】曼谷（Bangkok），人口800万</view>
-  <view class="toggle-wrap">
-    <text>点击展开全部></text>
-  </view>
+      【面积】51.3万平方公里。、马来西亚接壤，
+      东南临泰国湾（太平洋），西南濒安达曼海（印度洋）,
+      属热带季风气候，全年分为热、雨、凉三季，年均气温
+      27℃。
+      【首都】曼谷（Bangkok），人口800万</view>
+    <view class="toggle-wrap">
+      <view bindtap="toggleYear" wx:if="{{toggleFlag}}" class="toggle-view">点击展开全部<image src="../../img/icon24.png" class="top-img top-img1"></image>
+      </view>
+      <view bindtap="toggleYear" wx:else class="toggle-view">收起<image src="../../img/icon24.png" class="top-img"></image>
+      </view>
+    </view>
   </block>
   <view class="no-list" wx:else>
     <image src="../../img/icon23.png" class="no-img"></image>
