--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -67,6 +67,36 @@
   margin-left: 5rpx;
 }
 
+.search-wrap{
+  width: 700rpx;
+  height: 300rpx;
+  background: #FFFFFF;
+  border-radius:0 0 15rpx 15rpx;
+  position: absolute;
+  left: 25rpx;
+  top: 365rpx;
+  z-index: 1;
+  overflow-y:scroll;
+  padding: 20rpx 0;
+
+}
+.search-word{
+  width:670rpx;
+  height:70rpx;
+  display: flex;
+  align-items: center;
+  font-size: 30rpx;
+  color:#79C2E5;
+  border-bottom:1rpx solid #F2F2F2;
+  margin: 0 auto;
+}
+
+.word-img{
+width:22rpx;
+height:33rpx;
+margin-right:15rpx;
+}
+
 .hot-wrap {
   position: absolute;
   top: 410rpx;
